fix: correct transition time update in location mode

BUG: 412211